Removes unsupported MaxPermSize